#594 Add spinner wrapper to donations.

--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -9,8 +9,10 @@
                 {{ 'Fund the GIRCHI, get the relevant GeDs and hit the leaderboard'|t }}
             </p>
         </div>
-        <div class="card mb-4 mb-sm-8">
-            <div class="card-body">
+        <div class="card mb-4 mb-sm-8" >
+            <div class="spinner-wrapper">
+            </div>
+            <div class="card-body donation-card">
                 <div id="message-container"></div>
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
