--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -187,7 +187,7 @@
                                                         {{ paypal_form.amount }}
                                                     </div>
                                                     <div class="form-group w-50 w-md-30 px-sm-1 ">
-                                                        <label class="form-label" for="amount">ვალუტა</label>
+                                                        <label class="form-label" for="amount">{{'Currency' | t}}</label>
                                                         <div
                                                             class="form-control form-control-lg border-0 font-weight-bold">
                                                             {{ paypal_form.currencies }}
