--- a/web/modules/custom/girchi_paypal/templates/girchi-donations-paypal.html.twig
+++ b/web/modules/custom/girchi_paypal/templates/girchi-donations-paypal.html.twig
@@ -1,3 +1,5 @@
+{{ attach_library('girchi/facebook') }}
+
 <div class="bg-gradient-green overflow-hidden">
     <div class="container">
         <!-- Start of head -->
@@ -11,6 +13,21 @@
         </div>
         <div class="card mb-4 mb-sm-8">
             <div class="card-body">
+                <div
+                    class="modal fade"
+                    id="joinFbGroup"
+                    tabindex="-1"
+                    role="dialog"
+                    aria-labelledby="joinFbGroup"
+                    aria-hidden="true"
+                >
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content overflow-hidden" id="facebook-invite-modal">
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
                         <div class="px-md-8  px-lg-4 px-xl-8 py-2 py-md-3  py-xl-4">
@@ -67,6 +84,12 @@
                                 {{'Profile'|t}}
                             </a>
                             {% endif %}
+                            <button data-toggle="modal" data-target="#joinFbGroup" id="fbGroupButton"
+                                    class="btn btn-block d-flex align-items-center justify-content-center btn-with-icon btn-lg btn-purple text-uppercase my-3 my-sm-4 text-nowrap"
+                            >
+                                <i class="icon-social-facebook-circular-button font-size-5 font-size-sm-7 mr-2"></i>{{ 'Join Group'|t }}
+                            </button>
+
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6">
