--- a/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
@@ -112,7 +112,7 @@
                             <button data-toggle="modal" data-target="#joinFbGroup" id="fbGroupButton"
                                     class="btn btn-block d-flex align-items-center justify-content-center btn-with-icon btn-lg btn-purple text-uppercase my-3 my-sm-4 text-nowrap"
                             >
-                                <i class="icon-social-facebook-circular-button font-size-5 font-size-sm-7 mr-2"></i>{{ 'Join Group'|t }}
+                                <i class="icon-social-facebook-circular-button font-size-5 font-size-sm-7 mr-2"></i>{{ 'Join Partners'|t }}
                             </button>
                         </div>
                     </div>
