--- a/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
+++ b/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
@@ -35,7 +35,7 @@
 
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="lead" role="tabpanel" aria-labelledby="lead">
-                <ul class="nav nav-pills" id="myTab" role="tablist">
+                <ul class="nav nav-pills my-2" id="myTab" role="tablist">
                     <li class="nav-item">
                         <a
                             class="nav-link font-weight-bold text-uppercase {{leadPartnerDaily is not empty ? "active" : '' }}"
